# runSentenceTransformer

./: .Rbuildignore  DESCRIPTION  LICENSE  NAMESPACE  README.Rmd  README.md  configure
R/: extendr-wrappers.R  main.R
man/: download_model.Rd  embed.Rd  load_model_get_embed_function.Rd  local_model_path.Rd  rust_pwd.Rd  string_embedding.Rd
src/: Makevars.in  Makevars.win.in  entrypoint.c  runSentenceTransformer-win.def
src/rust/: Cargo.toml  shell.nix
src/rust/src/: lib.rs
src/rust/src/models/: bert.rs  mod.rs
tools/: config.R
