[package]
name = 'rust_backend'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'runSentenceTransformer'

[dependencies]
extendr-api = '*'
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tokenizers = "0.19"
candle-core = "0.9"
candle-nn = "0.9"
candle-transformers = "0.9"
